k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: default
  labels:
    app: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello-deployment
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-deployment
    spec:
      #imagePullSecrets:
      #  - name: jan-holec-ibm-cvut-demo-pull-secret
      containers:
      - name: hello-deployment
        image: "quay.io/jan_holec_ibm/cvut_containers:v1.0"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 5000
          name: web
      restartPolicy: Always
