k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "hello-pod"
  namespace: default
  labels:
    app: "hello-pod"
spec:
  containers:
  - name: hello-pod
    image: "quay.io/jan_holec_ibm/cvut_containers:v1.0"
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort: 5000
      name: web
  restartPolicy: Always
