k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-clusterip
  namespace: default
spec:
  selector:
    app: hello-deployment
  type: ClusterIP
  ports:
  - name: web
    protocol: TCP
    port: 5000
    targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-loadbalancer
  namespace: default
spec:
  selector:
    app: hello-deployment
  type: LoadBalancer
  ports:
  - name: web
    protocol: TCP
    port: 5000
    targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-nodeport
  namespace: default
spec:
  selector:
    app: hello-deployment
  type: NodePort
  ports:
  - name: web
    protocol: TCP
    port: 5000
    targetPort: web 
    nodePort: 30001
