k8s/statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-statefullset
  labels:
    app: hello-statefullset
spec:
  ports:
  - port: 5000
    name: web
  clusterIP: None
  selector:
    app: hello-statefullset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-statefullset
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello-statefullset
  serviceName: "hello-statefullset"
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-statefullset
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: hello-statefullset
        image: "quay.io/jan_holec_ibm/cvut_containers:v1.0"
        ports:
        - containerPort: 5000
          name: web
        volumeMounts:
        - name: hello-statefullset-mount
          mountPath: /test-volume
  volumeClaimTemplates:
  - metadata:
      name: hello-statefullset-mount
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ibmc-block-bronze"
      resources:
        requests:
          storage: 1Gi
